force-app/main/default/objects/Intake__c/Intake__c.object-meta.xml
<CustomObject>
    <label>Intake</label>
    <nameField>
        <displayFormat>INT-{YYYY}-{00000}</displayFormat>
        <label>Intake Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>