force-app/main/default/objects/Intake__c/fields/AI_Conversation_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Conversation_Summary__c</fullName>
    <label>AI Conversation Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>