force-app/main/default/objects/Intake__c/fields/AI_Next_Message__c.field-meta.xml
<CustomField>
    <fullName>AI_Next_Message__c</fullName>
    <label>AI Next Message</label>
    <type>TextArea</type>
</CustomField>