force-app/main/default/objects/Intake__c/fields/AI_Next_Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>AI_Next_Recommended_Action__c</fullName>
    <label>AI Next Recommended Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>