force-app/main/default/objects/Intake__c/fields/AI_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>AI_Sentiment__c</fullName>
    <label>AI Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>