force-app/main/default/objects/Intake__c/fields/AI_Triage_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Triage_Confidence__c</fullName>
    <label>AI Triage Confidence</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>