force-app/main/default/objects/Intake__c/fields/AI_Triage_Reason__c.field-meta.xml
<CustomField>
    <fullName>AI_Triage_Reason__c</fullName>
    <label>AI Triage Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>