force-app/main/default/objects/Intake__c/fields/AI_Triage_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>AI_Triage_Timestamp__c</fullName>
    <label>AI Triage Timestamp</label>
    <type>DateTime</type>
</CustomField>