force-app/main/default/objects/Intake__c/fields/AI_Triage_Verdict__c.field-meta.xml
<CustomField>
    <fullName>AI_Triage_Verdict__c</fullName>
    <label>AI Triage Verdict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>