force-app/main/default/objects/Intake__c/fields/Assigned_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Entered_At__c</fullName>
    <label>Assigned Entered At</label>
    <type>DateTime</type>
</CustomField>