force-app/main/default/objects/Intake__c/fields/Attorney_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Notes__c</fullName>
    <label>Attorney Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>