force-app/main/default/objects/Intake__c/fields/Call_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_URL__c</fullName>
    <label>Call Recording URL</label>
    <type>Url</type>
</CustomField>