force-app/main/default/objects/Intake__c/fields/Case_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Case_Address_2__c</fullName>
    <label>Case Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>