force-app/main/default/objects/Intake__c/fields/Case_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Case_Postal_Code__c</fullName>
    <label>Case Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>