force-app/main/default/objects/Intake__c/fields/Case_Quality_Derived__c.field-meta.xml
<CustomField>
    <fullName>Case_Quality_Derived__c</fullName>
    <formula>IF(Qualification_Score__c &gt;= 76, &quot;Hot&quot;,
  IF(Qualification_Score__c &gt;= 51, &quot;Warm&quot;,
    &quot;Cold&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Quality Derived</label>
    <type>Text</type>
</CustomField>