force-app/main/default/objects/Intake__c/fields/Case_Quality_Display__c.field-meta.xml
<CustomField>
    <fullName>Case_Quality_Display__c</fullName>
    <formula>IF(
    Qualification_Score__c &gt;= 91,

    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25),

IF(
    Qualification_Score__c &gt;= 76,

    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/RedStar/red_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/RedOutlineStar/red_star_outline.png&quot;, &quot;Star&quot;, 25, 25),

IF(
    Qualification_Score__c &gt;= 51,

    IMAGE(&quot;/resource/OrangeStar/orange_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/OrangeStar/orange_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/OrangeStar/orange_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/OrangeOutlineStar/orange_star_outline.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/OrangeOutlineStar/orange_star_outline.png&quot;, &quot;Star&quot;, 25, 25),

IF(
    Qualification_Score__c &gt;= 26,

    IMAGE(&quot;/resource/BlueStar/blue_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/BlueStar/blue_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/BlueOutlineStar/blue_star_outline.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/BlueOutlineStar/blue_star_outline.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/BlueOutlineStar/blue_star_outline.png&quot;, &quot;Star&quot;, 25, 25),

    IMAGE(&quot;/resource/BlueStar/blue_star.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/BlueOutlineStar/blue_star_outline.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/BlueOutlineStar/blue_star_outline.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/BlueOutlineStar/blue_star_outline.png&quot;, &quot;Star&quot;, 25, 25) &amp;
    IMAGE(&quot;/resource/BlueOutlineStar/blue_star_outline.png&quot;, &quot;Star&quot;, 25, 25)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Quality Display</label>
    <type>Text</type>
</CustomField>