force-app/main/default/objects/Intake__c/fields/Case_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Case_Quality_Score__c</fullName>
    <label>Case Quality Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>