force-app/main/default/objects/Intake__c/fields/Case_Summary__c.field-meta.xml
<CustomField>
    <fullName>Case_Summary__c</fullName>
    <label>Case Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>