force-app/main/default/objects/Intake__c/fields/Citation_Issued__c.field-meta.xml
<CustomField>
    <fullName>Citation_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Citation Issued</label>
    <type>Checkbox</type>
</CustomField>