force-app/main/default/objects/Intake__c/fields/Citation_Issued_To__c.field-meta.xml
<CustomField>
    <fullName>Citation_Issued_To__c</fullName>
    <label>Citation Issued To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Opposing Party</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>