force-app/main/default/objects/Intake__c/fields/Client_Airbags_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Client_Airbags_Deployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Airbags Deployed</label>
    <type>Checkbox</type>
</CustomField>