force-app/main/default/objects/Intake__c/fields/Client_At_Fault__c.field-meta.xml
<CustomField>
    <fullName>Client_At_Fault__c</fullName>
    <label>Client At Fault</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes;</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>