force-app/main/default/objects/Intake__c/fields/Client_Fault_Percent__c.field-meta.xml
<CustomField>
    <fullName>Client_Fault_Percent__c</fullName>
    <label>Client Fault Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>