force-app/main/default/objects/Intake__c/fields/Client_Has_Med_Pay__c.field-meta.xml
<CustomField>
    <fullName>Client_Has_Med_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Has Med Pay</label>
    <type>Checkbox</type>
</CustomField>