force-app/main/default/objects/Intake__c/fields/Client_Has_UM__c.field-meta.xml
<CustomField>
    <fullName>Client_Has_UM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Policy Limits</label>
    <type>Checkbox</type>
</CustomField>