force-app/main/default/objects/Intake__c/fields/Client_Ins_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Client_Ins_Carrier__c</fullName>
    <label>Client Ins. Carrier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>