force-app/main/default/objects/Intake__c/fields/Client_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Policy_Number__c</fullName>
    <label>Client Policy Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>