force-app/main/default/objects/Intake__c/fields/Client_UM_Limits__c.field-meta.xml
<CustomField>
    <fullName>Client_UM_Limits__c</fullName>
    <label>Client UM Limits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>