force-app/main/default/objects/Intake__c/fields/Client_Vehicle_Damage__c.field-meta.xml
<CustomField>
    <fullName>Client_Vehicle_Damage__c</fullName>
    <label>Client Vehicle Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Totaled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>