force-app/main/default/objects/Intake__c/fields/Client_Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Client_Vehicle_Make__c</fullName>
    <label>Client Vehicle Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>