force-app/main/default/objects/Intake__c/fields/Client_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Client_Vehicle_Model__c</fullName>
    <label>Client Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>