force-app/main/default/objects/Intake__c/fields/Client_Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Client_Vehicle_Year__c</fullName>
    <label>Client Vehicle Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>