force-app/main/default/objects/Intake__c/fields/Client_Wearing_Seatbelt__c.field-meta.xml
<CustomField>
    <fullName>Client_Wearing_Seatbelt__c</fullName>
    <label>Client Wearing Seatbelt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>