force-app/main/default/objects/Intake__c/fields/Cold_Notified__c.field-meta.xml
<CustomField>
    <fullName>Cold_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cold Notified</label>
    <type>Checkbox</type>
</CustomField>