force-app/main/default/objects/Intake__c/fields/Commercial_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Vehicle</label>
    <type>Checkbox</type>
</CustomField>