force-app/main/default/objects/Intake__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>