force-app/main/default/objects/Intake__c/fields/Contact_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Contact_Intelligence__c</fullName>
    <label>Contact Intelligence</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>