force-app/main/default/objects/Intake__c/fields/Contact_Intelligence_At__c.field-meta.xml
<CustomField>
    <fullName>Contact_Intelligence_At__c</fullName>
    <label>Contact Intelligence At</label>
    <type>DateTime</type>
</CustomField>