force-app/main/default/objects/Intake__c/fields/Converted_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Converted_Entered_At__c</fullName>
    <label>Converted Entered At</label>
    <type>DateTime</type>
</CustomField>