force-app/main/default/objects/Intake__c/fields/Current_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Current_Symptoms__c</fullName>
    <label>Current Symptoms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>