force-app/main/default/objects/Intake__c/fields/Dashcam_Available__c.field-meta.xml
<CustomField>
    <fullName>Dashcam_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dashcam Available</label>
    <type>Checkbox</type>
</CustomField>