force-app/main/default/objects/Intake__c/fields/Deferred_Until__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Until__c</fullName>
    <label>Deferred Until</label>
    <type>Date</type>
</CustomField>