force-app/main/default/objects/Intake__c/fields/Dial_Phone__c.field-meta.xml
<CustomField>
    <fullName>Dial_Phone__c</fullName>
    <formula>IF(
  ISBLANK( Intake_Phone__c ),
  &quot;&quot;,
  HYPERLINK(
    &quot;/apex/TwilioSoftphone?intakeId=&quot; &amp; Id &amp;
      &quot;&amp;number=&quot; &amp; SUBSTITUTE( Intake_Phone__c, &quot;+&quot;, &quot;%2B&quot; ) &amp;
      &quot;&amp;autodial=1&quot;,
    &quot;📞 &quot; &amp; Intake_Phone__c,
    &quot;twilioSoftphone&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial Phone</label>
    <type>Text</type>
</CustomField>