force-app/main/default/objects/Intake__c/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <label>Disqualification Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Injury</fullName>
            </value>
            <value>
                <fullName>No Liability</fullName>
            </value>
            <value>
                <fullName>Out of State</fullName>
            </value>
            <value>
                <fullName>Low Damages</fullName>
            </value>
            <value>
                <fullName>Pre-Existing Only</fullName>
            </value>
            <value>
                <fullName>Comparative Fault &gt;50%</fullName>
            </value>
            <value>
                <fullName>No Insurance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>