force-app/main/default/objects/Intake__c/fields/DUI_Involved__c.field-meta.xml
<CustomField>
    <fullName>DUI_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DUI Involved</label>
    <type>Checkbox</type>
</CustomField>