force-app/main/default/objects/Intake__c/fields/Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employer_Phone__c</fullName>
    <label>Employer Phone</label>
    <type>Phone</type>
</CustomField>