force-app/main/default/objects/Intake__c/fields/Engagement_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Changed_At__c</fullName>
    <label>Engagement Changed At</label>
    <type>DateTime</type>
</CustomField>