force-app/main/default/objects/Intake__c/fields/ER_Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>ER_Hospital_Name__c</fullName>
    <label>ER Hospital Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>