force-app/main/default/objects/Intake__c/fields/ER_Visit__c.field-meta.xml
<CustomField>
    <fullName>ER_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ER Visit</label>
    <type>Checkbox</type>
</CustomField>