force-app/main/default/objects/Intake__c/fields/ER_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>ER_Visit_Date__c</fullName>
    <label>ER Visit Date</label>
    <type>Date</type>
</CustomField>