force-app/main/default/objects/Intake__c/fields/Escalated_To_Manager__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated To Manager</label>
    <type>Checkbox</type>
</CustomField>