force-app/main/default/objects/Intake__c/fields/Estimated_Medical_Bills__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Medical_Bills__c</fullName>
    <label>Estimated Medical Bills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>