force-app/main/default/objects/Intake__c/fields/First_Response_DateTime__c.field-meta.xml
<CustomField>
    <fullName>First_Response_DateTime__c</fullName>
    <label>First Response DateTime</label>
    <type>DateTime</type>
</CustomField>