force-app/main/default/objects/Intake__c/fields/Follow_Up_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Next_Step__c</fullName>
    <label>Follow Up Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>