force-app/main/default/objects/Intake__c/fields/Government_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Government_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government Vehicle</label>
    <type>Checkbox</type>
</CustomField>