force-app/main/default/objects/Intake__c/fields/Has_Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Has_Health_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Health Insurance</label>
    <type>Checkbox</type>
</CustomField>