force-app/main/default/objects/Intake__c/fields/Has_Minor_Children__c.field-meta.xml
<CustomField>
    <fullName>Has_Minor_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Minor Children</label>
    <type>Checkbox</type>
</CustomField>