force-app/main/default/objects/Intake__c/fields/Health_Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Carrier__c</fullName>
    <label>Health Insurance Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>