force-app/main/default/objects/Intake__c/fields/Hit_and_Run__c.field-meta.xml
<CustomField>
    <fullName>Hit_and_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hit and Run</label>
    <type>Checkbox</type>
</CustomField>