force-app/main/default/objects/Intake__c/fields/Hospitalization_End__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization_End__c</fullName>
    <label>Hospitalization End</label>
    <type>Date</type>
</CustomField>