force-app/main/default/objects/Intake__c/fields/Hospitalization_Start__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization_Start__c</fullName>
    <label>Hospitalization Start</label>
    <type>Date</type>
</CustomField>