force-app/main/default/objects/Intake__c/fields/Hospitalized__c.field-meta.xml
<CustomField>
    <fullName>Hospitalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospitalized</label>
    <type>Checkbox</type>
</CustomField>