force-app/main/default/objects/Intake__c/fields/Hours_Worked_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Per_Week__c</fullName>
    <label>Hours Worked Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>