force-app/main/default/objects/Intake__c/fields/Incident_Age__c.field-meta.xml
<CustomField>
    <fullName>Incident_Age__c</fullName>
    <label>Incident Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 7 Days</fullName>
            </value>
            <value>
                <fullName>8–30 Days</fullName>
            </value>
            <value>
                <fullName>31–90 Days</fullName>
            </value>
            <value>
                <fullName>90+ Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>