force-app/main/default/objects/Intake__c/fields/Incident_City__c.field-meta.xml
<CustomField>
    <fullName>Incident_City__c</fullName>
    <label>Incident City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>