force-app/main/default/objects/Intake__c/fields/Incident_County__c.field-meta.xml
<CustomField>
    <fullName>Incident_County__c</fullName>
    <label>Incident County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>