force-app/main/default/objects/Intake__c/fields/Incident_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Incident_Day_of_Week__c</fullName>
    <formula>TEXT(MOD(Incident_Date__c - DATE(1900,1,7),7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Day of Week</label>
    <type>Text</type>
</CustomField>