force-app/main/default/objects/Intake__c/fields/Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>Incident_Location__c</fullName>
    <label>Incident Location</label>
    <type>Address</type>
</CustomField>