force-app/main/default/objects/Intake__c/fields/Incident_Street__c.field-meta.xml
<CustomField>
    <fullName>Incident_Street__c</fullName>
    <label>Incident Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>