force-app/main/default/objects/Intake__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car Accident</fullName>
            </value>
            <value>
                <fullName>Truck Accident</fullName>
            </value>
            <value>
                <fullName>Motorcycle Accident</fullName>
            </value>
            <value>
                <fullName>Pedestrian Accident</fullName>
            </value>
            <value>
                <fullName>Slip &amp; Fall</fullName>
            </value>
            <value>
                <fullName>Dog Bite</fullName>
            </value>
            <value>
                <fullName>Medical Malpractice</fullName>
            </value>
            <value>
                <fullName>Workplace Injury</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>