force-app/main/default/objects/Intake__c/fields/Injury_at_Scene__c.field-meta.xml
<CustomField>
    <fullName>Injury_at_Scene__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injury at Scene</label>
    <type>Checkbox</type>
</CustomField>