force-app/main/default/objects/Intake__c/fields/Injury_Severity__c.field-meta.xml
<CustomField>
    <fullName>Injury_Severity__c</fullName>
    <label>Injury Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Fatality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>