force-app/main/default/objects/Intake__c/fields/Injury_Types__c.field-meta.xml
<CustomField>
    <fullName>Injury_Types__c</fullName>
    <label>Injury Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whiplash</fullName>
            </value>
            <value>
                <fullName>Back Injury</fullName>
            </value>
            <value>
                <fullName>Head Injury (TBI)</fullName>
            </value>
            <value>
                <fullName>Broken Bones</fullName>
            </value>
            <value>
                <fullName>Lacerations</fullName>
            </value>
            <value>
                <fullName>Soft Tissue</fullName>
            </value>
            <value>
                <fullName>Nerve Damage</fullName>
            </value>
            <value>
                <fullName>Spinal</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Psychological</fullName>
            </value>
            <value>
                <fullName>Burns</fullName>
            </value>
            <value>
                <fullName>Amputation</fullName>
            </value>
            <value>
                <fullName>Fatality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>